--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ additional_links:
 
 # About Section
 # about_title: About Me (Use this to override about section title)
-about_profile_image: images/profile.jpg
+about_profile_image: images/profile1.jpg
 about_content : | 
   abput me 
   - about me 
