--- a/_config.yml
+++ b/_config.yml
@@ -52,9 +52,13 @@ additional_links:
 # about_title: About Me (Use this to override about section title)
 about_profile_image: images/profile1.jpg
 about_content : | 
-    拥有5年经验的全栈开发,专注于Java/Python后端服务和React.js前端服务,熟悉AWS托管环境 
+    拥有5年经验的全栈开发,专注于Java/Python后端服务和React.js前端服务,熟悉AWS INFRA环境 
 
-    曾为多家韩国大企业提供企业级定制服务,参与了从系统设计规划、开发到日程管理的全过程
+    曾为多家韩国大企业及政府部门提供企业级定制服务,参与了从系统设计规划、开发到日程管理的全过程
+
+    "Good code is its own best documentation"
+    优秀的代码应该是清晰易懂的，无需额外注释或解释，即使是初学者亦能理解
+    优秀的代码应该具有良好的结构、命名清晰、逻辑简单明了，使得它不仅对于编写者自己，也易于其他人的阅读和理解
 
 # about_content: | # this will include new lines to allow paragraphs
 #   Write an awesome description about yourself here, this supports markdown, so you can add [links](http://foobar.com) and highlight things <mark>like this</mark>.
@@ -70,33 +74,33 @@ content:
   - title: Experience
     layout: list
     content:
-      # - layout: left
-      #   title: BusinessOn 
-      #   sub_title: 全栈开发
-      #   caption: (2022-至今)
-      #   link: https://www.businesson.co.kr/
-      #   quote: >
-      #    韩上市B2B企业, 电子发票解决方案服务
-      #   description: | # this will include new lines to allow paragraphs
-      #     -
-      #     -
-      #     -
-      #     -
-      #     -
+      - layout: left
+        title: BusinessOn 
+        sub_title: 全栈开发
+        caption: (2022-至今)
+        link: https://www.businesson.co.kr/
+        quote: >
+         韩上市B2B企业, 电子发票解决方案服务,电子合同解决方案服务
+        description: | # this will include new lines to allow paragraphs
+          -
+          -
+          -
+          -
+          -
 
-      # - layout: left
-      #   title: Glosign
-      #   sub_title: 后端开发
-      #   caption: 2019-2022(公司合并非离职)
-      #   link: https://www.glosign.com
-      #   quote: >
-      #     初创企业, 创业初期成员(MAU )
-      #   description: | # this will include new lines to allow paragraphs
-      #     -
-      #     -
-      #     -
-      #     -
-      #     -
+      - layout: left
+        title: Glosign
+        sub_title: 后端开发
+        caption: 2019-2022(公司合并非离职)
+        link: https://www.glosign.com
+        quote: >
+          初创企业, 创业初期成员(日PV十万级)
+        description: | # this will include new lines to allow paragraphs
+          -
+          -
+          -
+          -
+          -
           
   
   - title: Projects # Title for the section
@@ -179,6 +183,64 @@ content:
           - React.js/Spring-Boot(java 8)/PostgreSQL
 
           
+      - layout: top-middle
+        border: weak  # Value of `weak` will display a weak border below this item. # Any 
+                      # other value (or no value) means no border will be displayed
+        title: 韩国小企业市场促进公司
+        link: https://www.semas.or.kr/web/main/index.kmdc
+        # link_text: Link Text
+        # additional_links:
+        #   - title:  Github page for project (eg. sproogen/modern-resume-theme)
+        #     icon: fab fa-github
+        #     url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
+        quote: >
+          韩政府部门网站(全韩企业法人使用,日PV千万级)
+        description: |
+          - 高流量高并发高可用系统
+          - 千万级压测和实时监控
+          - 毫秒级适配Slow query 调优,JVM调优,WAS/WEB/DB多集群服务器调优
+          - 贷款类项目,各项数据审核自动化,个人认证自动化等政府机关API调用适配
+          - React.js/Spring-Boot(java 8),Django 3/Oracle,PostgreSQL
+
+      - layout: top-middle
+        border: weak  # Value of `weak` will display a weak border below this item. # Any 
+                      # other value (or no value) means no border will be displayed
+        title: SaaS平台Python Django项目 JAVA SpringBoot 迁移重构
+        link: - 
+        # link_text: Link Text
+        # additional_links:
+        #   - title:  Github page for project (eg. sproogen/modern-resume-theme)
+        #     icon: fab fa-github
+        #     url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
+        quote: >
+          公司服务平台的历史代码重构,从python 迁移至Java
+        description: |
+          - 初创期Django2 代码重构
+          - 数据库不合理架构重构
+          - TEST CASE 部署前自动测试单元构建
+          - CI/CD 自动化部署和自动监控
+          - Spring-Boot(java 8),Django 2/PostgreSQL
+
+      - layout: top-middle
+        border: weak  # Value of `weak` will display a weak border below this item. # Any 
+                      # other value (or no value) means no border will be displayed
+        title: 公司内部Back-Office 系统(职员用管理系统)
+        link: - 
+        # link_text: Link Text
+        # additional_links:
+        #   - title:  Github page for project (eg. sproogen/modern-resume-theme)
+        #     icon: fab fa-github
+        #     url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
+        quote: >
+          内部BO系统,管理所有服务,每月数据自动计算等
+        description: |
+          - 为通过 IOS27001认证构建此管理系统
+          - 公司内部用,保密和IP监控系统
+          - 内部网络专用架构
+          - CI/CD 自动化部署和自动监控
+          - React.js/Django 3/PostgreSQL
+
+          
  
 
   - title: Education
@@ -193,6 +255,8 @@ content:
         description: |
           - 建国大学计算机科学系软件工学科
           - 毕业设计,毕业论文获奖
+          - 优秀外国人学生奖学金
+          - 优秀韩语奖学金
   
   
   - title: Skills
