--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ name: ZL XIA
 title: Full Stack Engineer
 email: xiazilei1994@gmail.com
 # email_title: Email (Email title override)
-phone: +82 01039998656
+phone: ''
 # phone_title: Phone (Phone title override)
 # website: Your website (eg. https://google.com)(optional)
 # website_title: Web (Website title override)
