--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,9 @@ name: ZL XIA
 title: Full Stack Engineer
 email: xiazilei1994@gmail.com
 # email_title: Email (Email title override)
-phone: '82'
+# phone: '82'
 # phone_title: Phone (Phone title override)
-# website: Your website (eg. https://google.com)(optional)
+website: https://xzlpinbo.github.io/
 # website_title: Web (Website title override)
 
 # Dark Mode (true/false/never)
