--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ darkmode: never
 
 # Social links
 # twitter_username: jekyllrb
-# github_username:  jekyll
+github_username:  https://xzlpinbo.github.io/
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
 # facebook_username: jekyll
